--- a/practice-HTML-CSS/Projeto-alura/blog.html
+++ b/practice-HTML-CSS/Projeto-alura/blog.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8" />
         <link rel="icon" href="favicon.png" />
         <title>Biografia - João da Silva</title>
+        <link rel="stylesheet" href="index.css">
+        <!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+
+        <!-- carrega a fonte Open Sans Condensed na versão negrito, -->
+        <!-- que é a única necessária para os cabeçalhos            -->
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     </head>
     <body>
         <h1>Blog</h1>
