--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,14 @@
         <title>Blog - João da Silva</title>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
-        <link rel="stylesheet" href="site.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
     </head>
     <body>
         <main>
             <h1>Blog</h1>
+            <div>
 
             <article>
                 <h2>O essencial de design responsivo</h2>
@@ -41,6 +42,7 @@
                 <a href="#">Leia mais</a>
                 <footer>Tags: <a href="#">javascript</a>, <a href="#">boas práticas</a></footer>
             </article>
+        </div>
         </main>
         <img src="eu.jpg" alt="Foto de João da Silva">
         <aside>
