--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,10 @@
 	<head>
 		<title>Blog - João da Silva</title>
 		<meta charset="utf-8">
-		<link rel="icon" href="favicon.png">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="index.css">
+		<link rel="icon" href="img/favicon.png">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/blog.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 	</head>
@@ -45,7 +46,7 @@
 				</article>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva" class="minha-foto">
+		<img src="img/eu.jpg" alt="Foto de João da Silva" class="minha-foto">
 		<aside class="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
