--- a/avancando-html-css/index.html
+++ b/avancando-html-css/index.html
@@ -16,19 +16,20 @@
         <img class="foto-home" src="imagens/eu.jpg" alt="Foto de João da Silva">
         <h1>João da Silva</h1>
         <p class="subtitulo-principal">Desenvolvedor web</p>
-        <ul class="eficiencia">
-        <li class="palavra-home eficiencia">Eficiência</li>
-        <li class="palavra-home boas-praticas">Boas práticas</li>
-        <li class="palavra-home codigo-limpo">Código limpo</li>
-        <li class="palavra-home css3">CSS3</li>
-        <li class="palavra-home html5">HTML5</li>
-        <li class="palavra-home javascript">JavaScript</li>
-        <li class="palavra-home acessibilidade">Acessibilidade</li>
-        <li class="palavra-home responsivo">Responsivo</li>
-        <li class="palavra-home otimizacoes">Otimizações</li>
-        <li class="palavra-home agilidade">Agilidade</li>
-        <li class="palavra-home design">Design</li>
-    </ul>
+        <ul class="palavras-home">
+            <li class="palavra-home eficiencia">Eficiência</li>
+            <li class="palavra-home boas-praticas">Boas práticas</li>
+            <li class="palavra-home codigo-limpo">Código limpo</li>
+            <li class="palavra-home css3">CSS3</li>
+            <li class="palavra-home html5">HTML5</li>
+            <li class="palavra-home javascript">JavaScript</li>
+            <li class="palavra-home acessibilidade">Acessibilidade</li>
+            <li class="palavra-home responsivo">Responsivo</li>
+            <li class="palavra-home otimizacoes">Otimizações</li>
+            <li class="palavra-home agilidade">Agilidade</li>
+            <li class="palavra-home design">Design</li>
+        </ul>
+        <a class="banner-twitter" href="http://twitter.com/joaodasilva">Siga-me no Twitter</a>
     </header>
     <main>
         <section class="secao-inicio saudacao">
@@ -51,8 +52,8 @@
                 <li class="mais-recente">
                     <a href="blog.html">O essencial de design responsivo</a>
                     <p class="inicio-post">
-            Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?
-        </p>
+                        Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?
+                    </p>
                 </li>
                 <li>
                     <a href="blog.html">Por que fazer páginas acessíveis?</a>
