--- a/avancando-html-css/index.html
+++ b/avancando-html-css/index.html
@@ -45,7 +45,7 @@
             </ul>
             <a class="botao-index" href="portfolio.html">Veja mais</a>
         </section>
-        <section class="secao-inicio blog">
+        <section class="secao-inicio blog inicio-post">
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
