--- a/avancando-html-css/index.html
+++ b/avancando-html-css/index.html
@@ -45,7 +45,7 @@
             </ul>
             <a class="botao-index" href="portfolio.html">Veja mais</a>
         </section>
-        <section class="secao-inicio blog inicio-post">
+        <section class="secao-inicio blog">
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
@@ -57,9 +57,15 @@
                 </li>
                 <li>
                     <a href="blog.html">Por que fazer páginas acessíveis?</a>
+                    <p class="inicio-post">
+                        Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?
+                    </p>
                 </li>
                 <li>
                     <a href="blog.html">JavaScript não obstrusivo</a>
+                    <p class="inicio-post">
+                        JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.
+                    </p>
                 </li>
             </ol>
             <a class="botao-index" href="blog.html">Veja mais</a>
